First version working 99.8% reduction